service/opencost/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-alb
  namespace: argocd
  annotations:
    alb.ingress.kubernetes.io/group.name: baseport-dev
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/tags: "PROJECT=BASEPORT_PRD"
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80},{"HTTPS":443}]'
    alb.ingress.kubernetes.io/ssl-redirect: "443"
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-northeast-1:674582907715:certificate/e30f56be-c73d-4068-8ee7-3661d50f7447
    alb.ingress.kubernetes.io/security-groups: baseport-prd-IngressDev
    alb.ingress.kubernetes.io/manage-backend-security-group-rules: "true"
    alb.ingress.kubernetes.io/backend-protocol: HTTPS
spec:
  ingressClassName: alb
  rules:
    - host: argocd.dev.baseport.net
      http:
        paths:
          - path: /
            backend:
              service:
                name: argocd-server
                port:
                  number: 443
            pathType: Prefix
  # Ingress TLS: https://kubernetes.io/docs/reference/generated/kubernetes-api/v1.26/#ingresstls-v1-networking-k8s-io
  tls:
  - hosts:  # ターゲットのTLS証明書に含まれるホスト名
    - argocd.argoproj.io
